--- a/package.json
+++ b/package.json
@@ -17,4 +17,9 @@
         "postcss": "^8.4.40",
         "tailwindcss": "^3.4.7"
     }
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "heroku-postbuild": "npm run build"
+    },
 }
